--- a/15_AsyncSamples/AsyncUWP/App.xaml
+++ b/15_AsyncSamples/AsyncUWP/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application
-    x:Class="AsyncWindowsApp.App"
+    x:Class="AsyncUWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AsyncWindowsApp"
-    RequestedTheme="Light">
+    xmlns:local="using:AsyncUWP">
 
 </Application>
